# osu-keyboard

./: .gitignore  Cargo.toml  LICENSE  README.md  avr-atmega328p.json  build-atmega328p.sh  build.sh  deploy-atmega328p.sh
src/: error_system.rs  main.rs  program.rs
src/processor/: keyboard_processor.rs  keyboard_program.rs  mod.rs
src/program/: keyboard_program.rs  mod.rs
